# siteforge

./: autoresearch.jsonl  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
SiteForge/: next.config.js  package-lock.json  package.json
SiteForge/.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
SiteForge/src/: middleware.ts
chinwag_api/: .env.example  .gitignore  requirements.txt
chinwag_api/scripts/: add_seeds_to_audience.py  api_client.py  config.py  create_audience.py  create_playbook.py  create_recommendation.py  create_seed.py  create_sequence.py  link_recommendations_to_seed.py  link_sequences_to_playbook.py  playbook_pipeline.py  verify_playbook.py
chinwag_api/tests/: test_add_seeds_to_audience.py  test_api_client.py  test_config.py  test_create_audience.py  test_create_playbook.py  test_create_recommendation.py  test_create_seed.py  test_create_sequence.py  test_link_recommendations_to_seed.py  test_link_sequences_to_playbook.py
denik/brand2print/: README.md  __init__.py  pyproject.toml  server.py
denik/brand2print/pipeline/: __init__.py  core.py  vectorizer.py
denik/web/: QA-REPORT.md  package-lock.json  package.json  test-colors.html
display_/: DOCK-DISPLAY-FIX-DESIGN.md  dock-display-reinit.service  dock-display-reinit.sh  dock-thunderbolt.rules
n8/: SPEC.md
src/: index.ts
src/dashboard/: routes.ts  scrape-status.ts  (+1 more)
(+276 files in other folders)
